# tcm-knowledge-engine-mvp

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
database/: schema.sql
docs/: ACCEPTANCE_REPORT.md  ARCHITECTURE.md  AUTOMATED_INGESTION_PHASE_A_PLAN.md  CHUNKING_PHASE1_DIFF.patch  CHUNKING_PHASE1_STAT.txt  COMPACT_OUTPUT_FIX_DIFF.patch  COMPACT_OUTPUT_FIX_STAT.txt  COST_LIMITED_LITELLM_IMPLEMENTATION_PLAN.md  FINAL_COST_CONTROL_STATUS.md  FINAL_DOCS_DIFF.patch  FINAL_DOCS_STAT.txt  FINAL_GIT_STATUS.txt  FINAL_VALIDATION_PLAN.md  GIT_STATUS_STAGE2_FINAL.txt  HEALTH_CHECK_2026-04-28.md  INGESTION_PHASE_A1_DIFF.patch  INGESTION_PHASE_A1_FIX_DIFF.patch  INGESTION_PHASE_A1_FIX_STAT.txt  INGESTION_PHASE_A1_STAT.txt  JSON_TRUNCATION_FIX_DIFF.patch  JSON_TRUNCATION_FIX_STAT.txt  KEY_STORAGE_FIX_DIFF.patch  KEY_STORAGE_FIX_STAT.txt  KNOWLEDGE_GRAPH_SCHEMA_PROPOSAL.md  LITELLM_502_DIAG.md  LITELLM_502_RESULTS.json  LITELLM_LOCAL_SETUP.md  LITELLM_STAGE_GIT_STATUS.txt  LITELLM_VALIDATION_CHECKLIST.md  LONG_TEXT_CHUNKING_PLAN.md  PRODUCTION_READY_REVIEW.md  QUALITY_FIX_ROUND2_2026-04-28.md  QUALITY_FIX_ROUND3_2026-04-28.md  ROADMAP.md  RUNTIME_VALIDATION_CHECKLIST.md  SQLITE_INGESTION_PLAN.md  SQLITE_INGESTION_REPORT.md  STAGE1_CODE_DIFF.patch  STAGE1_FIX_CODE_DIFF.patch  STAGE2_CODE_DIFF.patch  (+6 more)
litellm/: .env.example  config.example.yaml  config.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_processor.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  repository.rs
(+26 files in other folders)
