[package]
name = "tcm-knowledge-engine"
version = "0.1.0"
description = "TCM Knowledge Engine"
authors = ["dao"]
edition = "2021"

[lib]
name = "tcm_knowledge_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
